--- a/homled1ch2v0001.ipynb
+++ b/homled1ch2v0001.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP5Y0QPe4qXZUiZQPDovSCJ",
+      "authorship_tag": "ABX9TyNwBcaVZH60KszMn/vG8xb0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,6 +37,367 @@
       "source": [
         "#Hands-on - AG - created on 02-20-2022\n",
         "#Will work on recreating some of AG notebooks -> https://github.com/ageron/handson-ml"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# To support both python 2 and python 3\n",
+        "from __future__ import division, print_function, unicode_literals"
+      ],
+      "metadata": {
+        "id": "SUf1sEaaqFj8"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Common imports\n",
+        "import numpy as np\n",
+        "import os"
+      ],
+      "metadata": {
+        "id": "-LsGP9PWqa3m"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# to make this notebook's output stable across runs\n",
+        "np.random.seed(42)"
+      ],
+      "metadata": {
+        "id": "g9QSU59cqjt2"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# To support both python 2 and python 3\n",
+        "from __future__ import division, print_function, unicode_literals\n",
+        "\n",
+        "# Common imports\n",
+        "import numpy as np\n",
+        "import os\n",
+        "\n",
+        "# to make this notebook's output stable across runs\n",
+        "np.random.seed(42)\n",
+        "\n",
+        "# To plot pretty figures\n",
+        "%matplotlib inline\n",
+        "import matplotlib as mpl\n",
+        "import matplotlib.pyplot as plt\n",
+        "mpl.rc('axes', labelsize=14)\n",
+        "mpl.rc('xtick', labelsize=12)\n",
+        "mpl.rc('ytick', labelsize=12)"
+      ],
+      "metadata": {
+        "id": "qjUkCzd1qtL7"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Where to save the figures\n",
+        "PROJECT_ROOT_DIR = \".\"\n",
+        "CHAPTER_ID = \"end_to_end_project\"\n",
+        "IMAGES_PATH = os.path.join(PROJECT_ROOT_DIR, \"images\", CHAPTER_ID)\n",
+        "os.makedirs(IMAGES_PATH, exist_ok=True)"
+      ],
+      "metadata": {
+        "id": "iNXvUvzDqyPO"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def save_fig(fig_id, tight_layout=True, fig_extension=\"png\", resolution=300):\n",
+        "    path = os.path.join(IMAGES_PATH, fig_id + \".\" + fig_extension)\n",
+        "    print(\"Saving figure\", fig_id)\n",
+        "    if tight_layout:\n",
+        "        plt.tight_layout()\n",
+        "    plt.savefig(path, format=fig_extension, dpi=resolution)"
+      ],
+      "metadata": {
+        "id": "W93chPlKrK5R"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "import tarfile\n",
+        "import urllib.request\n",
+        "\n",
+        "DOWNLOAD_ROOT = \"https://raw.githubusercontent.com/ageron/handson-ml/master/\"\n",
+        "HOUSING_PATH = os.path.join(\"datasets\", \"housing\")\n",
+        "HOUSING_URL = DOWNLOAD_ROOT + \"datasets/housing/housing.tgz\"\n",
+        "\n",
+        "def fetch_housing_data(housing_url=HOUSING_URL, housing_path=HOUSING_PATH):\n",
+        "    os.makedirs(housing_path, exist_ok=True)\n",
+        "    tgz_path = os.path.join(housing_path, \"housing.tgz\")\n",
+        "    urllib.request.urlretrieve(housing_url, tgz_path)\n",
+        "    housing_tgz = tarfile.open(tgz_path)\n",
+        "    housing_tgz.extractall(path=housing_path)\n",
+        "    housing_tgz.close()"
+      ],
+      "metadata": {
+        "id": "85DgMxfErXMl"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fetch_housing_data()"
+      ],
+      "metadata": {
+        "id": "d61gU5V4r0xy"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "def load_housing_data(housing_path=HOUSING_PATH):\n",
+        "    csv_path = os.path.join(housing_path, \"housing.csv\")\n",
+        "    return pd.read_csv(csv_path)"
+      ],
+      "metadata": {
+        "id": "PvYoUz4Jr5xK"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "housing = load_housing_data()\n",
+        "housing.head()"
+      ],
+      "metadata": {
+        "id": "shOKBrZWr9K2",
+        "outputId": "0534bd77-c834-4704-bce0-558fd60d4250",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 250
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "\n",
+              "  <div id=\"df-b442f7ad-1303-476f-9d81-0b7c024ca286\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>longitude</th>\n",
+              "      <th>latitude</th>\n",
+              "      <th>housing_median_age</th>\n",
+              "      <th>total_rooms</th>\n",
+              "      <th>total_bedrooms</th>\n",
+              "      <th>population</th>\n",
+              "      <th>households</th>\n",
+              "      <th>median_income</th>\n",
+              "      <th>median_house_value</th>\n",
+              "      <th>ocean_proximity</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>-122.23</td>\n",
+              "      <td>37.88</td>\n",
+              "      <td>41.0</td>\n",
+              "      <td>880.0</td>\n",
+              "      <td>129.0</td>\n",
+              "      <td>322.0</td>\n",
+              "      <td>126.0</td>\n",
+              "      <td>8.3252</td>\n",
+              "      <td>452600.0</td>\n",
+              "      <td>NEAR BAY</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>-122.22</td>\n",
+              "      <td>37.86</td>\n",
+              "      <td>21.0</td>\n",
+              "      <td>7099.0</td>\n",
+              "      <td>1106.0</td>\n",
+              "      <td>2401.0</td>\n",
+              "      <td>1138.0</td>\n",
+              "      <td>8.3014</td>\n",
+              "      <td>358500.0</td>\n",
+              "      <td>NEAR BAY</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>-122.24</td>\n",
+              "      <td>37.85</td>\n",
+              "      <td>52.0</td>\n",
+              "      <td>1467.0</td>\n",
+              "      <td>190.0</td>\n",
+              "      <td>496.0</td>\n",
+              "      <td>177.0</td>\n",
+              "      <td>7.2574</td>\n",
+              "      <td>352100.0</td>\n",
+              "      <td>NEAR BAY</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>-122.25</td>\n",
+              "      <td>37.85</td>\n",
+              "      <td>52.0</td>\n",
+              "      <td>1274.0</td>\n",
+              "      <td>235.0</td>\n",
+              "      <td>558.0</td>\n",
+              "      <td>219.0</td>\n",
+              "      <td>5.6431</td>\n",
+              "      <td>341300.0</td>\n",
+              "      <td>NEAR BAY</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>-122.25</td>\n",
+              "      <td>37.85</td>\n",
+              "      <td>52.0</td>\n",
+              "      <td>1627.0</td>\n",
+              "      <td>280.0</td>\n",
+              "      <td>565.0</td>\n",
+              "      <td>259.0</td>\n",
+              "      <td>3.8462</td>\n",
+              "      <td>342200.0</td>\n",
+              "      <td>NEAR BAY</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b442f7ad-1303-476f-9d81-0b7c024ca286')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-b442f7ad-1303-476f-9d81-0b7c024ca286 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-b442f7ad-1303-476f-9d81-0b7c024ca286');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ],
+            "text/plain": [
+              "   longitude  latitude  ...  median_house_value  ocean_proximity\n",
+              "0    -122.23     37.88  ...            452600.0         NEAR BAY\n",
+              "1    -122.22     37.86  ...            358500.0         NEAR BAY\n",
+              "2    -122.24     37.85  ...            352100.0         NEAR BAY\n",
+              "3    -122.25     37.85  ...            341300.0         NEAR BAY\n",
+              "4    -122.25     37.85  ...            342200.0         NEAR BAY\n",
+              "\n",
+              "[5 rows x 10 columns]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
       ]
     }
   ]
